# cmake_udemy

./: README.md
module2/: CMakeLists.txt
module2/my_build_dir/: CMakeCache.txt  Makefile  calculator  cmake_install.cmake
module3/: CMakeLists.txt
module4/: CMakeLists.txt
module5/: CMakeLists.txt
module6/: CMakeLists.txt
module7/: CMakeLists.txt  main.cpp
module7/my_math_dir/: CMakeLists.txt
module7/my_math_dir/src/: addition.cpp
